FIx height of videos/thumbnails on mobile. Add CNAME file

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -242,7 +242,7 @@
 
 .youtube-player {
   flex: 0 0 92%;
-  height: 12rem;
+  height: 13.25rem;
   padding: 0;
   /* overflow: visible; */
 }
